fixed email verification popup not showing and added appropriate notification messages

--- a/src/pages/Dashboard/index.module.scss
+++ b/src/pages/Dashboard/index.module.scss
@@ -1,35 +1,27 @@
-.Dashboard {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-  width: 100vw;
-  height: 100vh;
-  .Sidebad {
-    grid-column: 1;
-    width: 20vw;
-    max-width: 300px;
-  }
-  // Dashboard Main Side Styling
-  .Sidemain {
-    grid-column: 1;
-    background-color: rgba(37, 150, 190, 0.1);
-    height: 100vh;
-    overflow-y: auto;
-    scrollbar-width: none;
-    &::-webkit-scrollbar-thumb,
-    &::-webkit-scrollbar-track,
-    ::-webkit-scrollbar {
-      display: none;
-    }
-  }
-}
-
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 890px) {
   .Dashboard {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    width: 100vw;
+    height: 100vh;
     .Sidebad {
-      grid-column: 1
+      grid-column: 1;
+      width: 20vw;
+      max-width: 300px;
     }
+    // Dashboard Main Side Styling
     .Sidemain {
-      grid-column: 2
+      // grid-column: 1;
+      grid-column: 2;
+      background-color: rgba(37, 150, 190, 0.1);
+      height: 100vh;
+      overflow-y: auto;
+      scrollbar-width: none;
+      &::-webkit-scrollbar-thumb,
+      &::-webkit-scrollbar-track,
+      ::-webkit-scrollbar {
+        display: none;
+      }
     }
   }
 }
